Adicionado efeito de escrever

--- a/css/login.css
+++ b/css/login.css
@@ -24,6 +24,11 @@
     font-size: 1.5em;
 }
 
+.login__header h2{
+    color: #333;
+    margin-top: .8em;
+}
+
 .login__input{
     border: 2px solid #333;
     border-radius: 8px;
