--- a/css/game.css
+++ b/css/game.css
@@ -1,9 +1,32 @@
+main{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 20px 50px;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 800px;
+    padding: 30px;
+    border-radius: 5px;
+    background-color: rgba(15, 116, 196, 0.9);
+    font-size: 1.2em;
+}
+
 .grid{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 15px;
     width: 100%;
-    max-width: 800px;
+    max-width: 790px;
     margin: 0 auto;
 }
 
